Use jsoniter-scala to parse and serialize circe AST